# project_cpp

./: README.md  SpaceFactory.cbp  SpaceFactory.depend  SpaceFactory.layout  changelog.txt  pierwotne_zalozenie  readme.txt
SpaceFactory/: CMakeLists.txt  LICENSE  SpaceFactoryCopy.depend  SpaceFactoryCopy.layout
SpaceFactory/Src/: main.cpp
SpaceFactory/Src/Window/: Window.cpp  Window.h
SpaceFactoryCopy/: SpaceFactoryCopy.cbp
Src/: main.cpp
Src/Game/: Base.cpp  Base.h  BaseFactory.cpp  BaseFactory.h  Building.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h  Tile.cpp  Tile.h  World.cpp  World.h
Src/Game/Buildings/: Buildings  Core.cpp  Core.h  OreSilo.cpp  OreSilo.h
Src/Graphic/: Animation.cpp  Animation.h  FloatingCombatText.cpp  FloatingCombatText.h  Sprite.cpp  Sprite.h  SpriteEnemy.cpp  SpriteEnemy.h  Texture.cpp  Texture.h  Ui.cpp  Ui.h
Src/Graphic/Uis/: EntityStats.cpp  EntityStats.h  PlayerStats.cpp  PlayerStats.h
Src/Tool/: Event.h  PropertyManager.cpp  PropertyManager.h  Tool.cpp  Tool.h
Src/Window/: Action.cpp  Action.h  ActionEventArg.h  AnimationManager.cpp  AnimationManager.h  Window.cpp  Window.h
